tests/checker/ok/http_entry_anonymous.can
Request => Response {
    Body("hello") -> Response(Status(200) * Headers())
}
