tests/checker/fail/codegen_gap_http_extern.can
Request => Response {
    Now() -> Response(Body("x") * Headers() * Status(200))
}
